src/test/pass/basic_syntax/tuple_subscript.lly
var s: string = <[1, "2"]> [1]