src/test/fail/classes/wrong_arg_count_class_method.lly
#[
SyntaxError: Function string::concat expects 2 args, but got 4.
Where: File "wrong_arg_count_class_method.lly" at line 8
]#

var s: string = ""

s.concat(1, 2, 3)
